--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,19 @@
-<html>
-  
-</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
 
+    <h1> Student's Full Name</h1>
+    <hr>
+    <h2> Lab Assignments</h2>
+    <ul>
+    <li><a href="Lab1_lastname.html"> </a>Lab 1: </li>
+    <li><a href="lab2_Daniels.html"> </a> Lab 2: Conditional Statements </li>
+    </ul>
+    
+</body>
+</html>
